--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,6 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.5.2"
 
     // Glide
-    //implementation 'com.github.bumptech.glide:glide:4.11.0'
-    //kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+//    kapt 'com.github.bumptech.glide:compiler:4.11.0'
 }
